# signing-only-wallet

./: CMakeLists.txt  README.md  a.out  main.cpp  test.cpp  test.h
uBitcoin/src/: uBitcoin_conf.h
